--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Weather App</title>
 </head>
 <body>
-
+    <nav class="navGradient">
+        <h1>Weather Dashboard</h1>
+    </nav>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./assets/js/main.js"></script>
