got longitude and latitude of city

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="weatherInfo col-lg-9 ">
                 <!--current weather-->
                 <div class="row currentWeather">
-                    <h2 class="cityNameDate">Atlanta (3/30/2021)</h2>
+                    <h2 class="cityNameDate"></h2>
                     <p class="temp">Temp:</p>
                     <p class="wind">Wind: </p>
                     <p class="humidity">Humidity</p>
